--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Marcos Ausina Fabra</h1>
     <hr>
     <h2>ESO</h2>
-    <h2>Grado Medio SMR</h2>
+    <h2>Grado Medio Sistemas Microinformáticos y Redes</h2>
     <h2>Curso de Socorrismo</h2>
     <hr>
     <a href="https://portal.edu.gva.es/ieselgrao/?page_id=690&lang=es">Web del instituto</a>
